Update dependencies and improve deployments