@@ -1,17 +1,16 @@
 package com.lucas.server.components.tradingbot.news.mapper;
 
-import com.fasterxml.jackson.databind.JsonNode;
 import com.lucas.server.components.tradingbot.common.dto.SymbolDomain;
 import com.lucas.server.components.tradingbot.news.dto.NewsDomain;
 import com.lucas.utils.Mapper;
 import com.lucas.utils.exception.MappingException;
 import org.flywaydb.core.internal.util.StringUtils;
 import org.springframework.stereotype.Component;
+import tools.jackson.databind.JsonNode;
 
 import java.text.MessageFormat;
 import java.time.Instant;
 import java.time.ZoneOffset;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
@@ -23,7 +22,7 @@ public class FinnhubNewsResponseMapper implements Mapper<JsonNode, NewsDomain> {
 
     public Set<NewsDomain> mapAll(JsonNode json, SymbolDomain symbol) throws MappingException {
         if (!json.isArray()) {
-            return Collections.emptySet();
+            return Set.of();
         }
 
         Set<NewsDomain> newsList = new HashSet<>();
@@ -41,12 +40,12 @@ public class FinnhubNewsResponseMapper implements Mapper<JsonNode, NewsDomain> {
                     .setDate(Instant.ofEpochSecond(json.get("datetime").asLong())
                             .atZone(ZoneOffset.UTC)
                             .toLocalDateTime())
-                    .setHeadline(json.get("headline").asText())
-                    .setSummary(StringUtils.left(json.get("summary").asText(), 1024))
-                    .setUrl(json.get("url").asText())
-                    .setSource(json.get("source").asText())
-                    .setCategory(json.get("category").asText())
-                    .setImage(json.get("image").asText());
+                    .setHeadline(json.get("headline").asString())
+                    .setSummary(StringUtils.left(json.get("summary").asString(), 1024))
+                    .setUrl(json.get("url").asString())
+                    .setSource(json.get("source").asString())
+                    .setCategory(json.get("category").asString())
+                    .setImage(json.get("image").asString());
         } catch (Exception e) {
             throw new MappingException(MessageFormat.format(MAPPING_ERROR, NEWS), e);
         }
